Kong-Canary-HTTPRoute/4-echo-and-echo2-all.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: echo-ns
#   labels:
#     istio-injection: enabled
# ---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo
  name: echo
spec:
  ports:
    - port: 1025
      name: tcp
      protocol: TCP
      targetPort: 1025
    - port: 1026
      name: udp
      protocol: TCP
      targetPort: 1026
    - port: 1027
      name: http
      protocol: TCP
      targetPort: 1027
  selector:
    app: echo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo
  name: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  strategy: {}
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - image: kong/go-echo:latest
          name: echo
          ports:
            - containerPort: 1025
            - containerPort: 1026
            - containerPort: 1027
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo2
  name: echo2
spec:
  ports:
    - port: 1025
      name: tcp
      protocol: TCP
      targetPort: 1025
    - port: 1026
      name: udp
      protocol: TCP
      targetPort: 1026
    - port: 1027
      name: http
      protocol: TCP
      targetPort: 1027
  selector:
    app: echo2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo2
  name: echo2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo2
  strategy: {}
  template:
    metadata:
      labels:
        app: echo2
    spec:
      containers:
        - image: kong/go-echo:latest
          name: echo2
          ports:
            - containerPort: 1025
            - containerPort: 1026
            - containerPort: 1027
          resources: {}
