Kong-Canary-HTTPRoute/4-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: simple-split-http-route
  annotations:
    konghq.com/strip-path: 'true'
spec:
  parentRefs:
  - name: kong
  rules:
  - backendRefs:
    - name: echo
      kind: Service
      port: 1027
      weight: 5
    - name: echo2
      kind: Service
      port: 1027
      weight: 95
