Kong-Canary-HTTPRoute/5-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: simple-split-http-route
  namespace: echons
  annotations:
    konghq.com/strip-path: 'true'
spec:
  parentRefs:
  - kind: Gateway
    name: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /echo
    backendRefs:
    - name: echo
      kind: Service
      port: 1027
      weight: 50
    - name: echo2
      kind: Service
      port: 1027
      weight: 50
# The Gateway, HTTPRoute and Backends must be in the same namespace
